force-app/main/default/objects/BAN_Prefix_Config__mdt/BAN_Prefix_Config__mdt.object-meta.xml
<CustomObject>
    <description>Maps DE Contracting Entity fragments to BAN country prefixes and sequence padding. Used by BillingAccountService to derive the correct country prefix from BillingAccount__c.Contracting_Entity__c.</description>
    <label>BAN Prefix Config</label>
    <pluralLabel>BAN Prefix Configs</pluralLabel>
</CustomObject>