force-app/main/default/objects/BAN_Prefix_Config__mdt/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <description>Two-letter country code used as the BAN prefix (e.g. SG, HK, KR).</description>
    <label>Country Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>