force-app/main/default/objects/BAN_Prefix_Config__mdt/fields/Entity_Fragment__c.field-meta.xml
<CustomField>
    <fullName>Entity_Fragment__c</fullName>
    <description>Substring to match (case-insensitive) against BillingAccount__c.Contracting_Entity__c to resolve the country prefix.</description>
    <label>Entity Fragment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>