force-app/main/default/objects/BAN_Prefix_Config__mdt/fields/Sequence_Padding__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Padding__c</fullName>
    <description>Number of digits in the zero-padded sequence (default 5, e.g. 00001).</description>
    <label>Sequence Padding</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>